class BookFormat < ApplicationRecord
end
