class CreditRole < ApplicationRecord
  validates :name, presence: true
end
